# Neural-Network

./: CMakeLists.txt
Biblioteka/: CMakeLists.txt
Biblioteka/include/: File.h  NeuralNetwork.h  Point.h
Biblioteka/src/: File.cpp  NeuralNetwork.cpp  Point.cpp
program/src/: main.cpp
